the form "\e];n;color[;color[...]]\a", where n is between 10 and 19.
You can specify up to (20 - n) semicolon-separated colors representing
the following attributes in order:  foreground, background, cursor,
mouse pointer, mouse pointer background (*), Tek foreground (*), Tek
background (*), highlight color (*), bold color, and underline color.
Attributes marked with a (*) are ignored by Eterm and may be left
empty, but their trailing semicolons must be present for xterm
compatibility.

For example, to set a white foreground, black background, yellow text
cursor, green mouse cursor, #ffaa00 for bold, and cyan for underline,
you could use either of the following:

echo -e "\e]10;white;black;yellow;green;;;;;#ffaa00;cyan\007"

 or

echo -e "\e]10;white\007"
echo -e "\e]11;black\007"
echo -e "\e]12;yellow\007"
echo -e "\e]13;green\007"
echo -e "\e]18;#ffaa00\007"
echo -e "\e]19;cyan\007"

Note that the setting of bold and underline colors using 18 and 19 are
Eterm extensions.
----------------------------------------------------------------------
Mon Mar 31 19:00:00 2003                          Simon Horman (horms)

Fixed compilation problem with XIM support which resulted
in Eterm segfaulting if the XIM server (kinput2) exited.
----------------------------------------------------------------------
Tue Apr 22 11:12:26 2003                        Michael Jennings (mej)

Fixed a couple minor type issues on 64-bit systems.

Cleaned up all the warnings in libscream.c and Esetroot.c.

Updated the spec file to depend on imlib2 and the JPEG/PNG loaders.
I hate to do that, but it seems necessary.
----------------------------------------------------------------------
Wed Apr 23 12:14:00 2003                        Michael Jennings (mej)

Apparently some versions of gcc (or maybe ld?) don't like duplicate
libraries on the link line.  Fix provided by Mark <somnione@gmx.net>.
----------------------------------------------------------------------